re PR c/2454 (Test Program A0376972.c fails with gcc-20010320, works with gcc-2.95.3)
	PR c/2454
	* combine.c (nonzero_bits): LOAD_EXTEND_OP should only apply
	to SUBREGs of MEMs.  (num_sign_bit_copies): Likewise.

From-SVN: r55386

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,4 +1,10 @@
 2002-07-10  Roger Sayle  <roger@eyesopen.com>
+
+	PR c/2454
+	* combine.c (nonzero_bits): LOAD_EXTEND_OP should only apply
+	to SUBREGs of MEMs.  (num_sign_bit_copies): Likewise.
+
+2002-07-10  Roger Sayle  <roger@eyesopen.com>
 	    Zack Weinberg <zack@codesourcery.com>
 
 	* builtins.def: Make the argument types of abort and exit
