* c-decl.c (duplicate_decls): Preserve the noreturn attribute on 	non-ANSI builtin functions.
	* gcc.c-torture/execute/builtin-noret-1.c: Test non-ANSI functions.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@55396 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2002-07-11  Roger Sayle  <roger@eyesopen.com>
+
+	* gcc.c-torture/execute/builtin-noret-1.c: Test non-ANSI functions.
+
 2002-07-10  Roger Sayle  <roger@eyesopen.com>
 
 	* gcc.c-torture/execute/20000217-1.c: Fix usage of "abort".
