--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-07-11  Roger Sayle  <roger@eyesopen.com>
+
+	* c-decl.c (duplicate_decls): Preserve the noreturn attribute on
+	non-ANSI builtin functions.
+
 Thu Jul 11 11:31:12 2002  J"orn Rennecke <joern.rennecke@superh.com>
 
 	* rtl.h (gen_rtx_CONST_VECTOR): Declare.
