--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,9 @@
+2002-07-11  Jason Merrill  <jason@redhat.com>
+
+	PR c++/7279
+	* tree.c (cp_copy_res_decl_for_inlining): Also copy
+	TREE_ADDRESSABLE.
+
 2002-07-10  Graham Stott  <graham.stott@btinternet.com>
 
 	* pt.c (template_parm_this_level_p, push_template_decl_real):
