re PR c++/7224 (g++ 3.x does not tecognize unused ambiguous inline member functions)
	PR c++/7224
	* class.c (add_method): Simplify.

	PR c++/7224
	* g++.dg/overload/error1.C: New test.

From-SVN: r55408

--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,8 @@
+2002-07-11  Mark Mitchell  <mark@codesourcery.com>
+
+	PR c++/7224
+	* class.c (add_method): Simplify.
+
 2002-07-11  Jason Merrill  <jason@redhat.com>
 
 	PR c++/7279
