PR c++/7224 	* class.c (add_method): Simplify.
	PR c++/7224
	* g++.dg/overload/error1.C: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@55409 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,8 @@
+2002-07-11  Mark Mitchell  <mark@codesourcery.com>
+
+	PR c++/7224
+	* g++.dg/overload/error1.C: New test.
+	
 2002-07-11  Rainer Orth  <ro@TechFak.Uni-Bielefeld.DE>
 
 	* gcc.misc-tests/linkage.exp: Handle mips-sgi-irix6*o32
