simplify-rtx.c (simplify_subreg): Handle floating point CONST_DOUBLEs.
gcc:
Thu Jul 11 15:39:21 2002  J"orn Rennecke <joern.rennecke@superh.com>

	* simplify-rtx.c (simplify_subreg): Handle floating point
	CONST_DOUBLEs.  When an integer subreg of a smaller mode than
	the element mode is requested, compute a subreg with an
	integer mode of the same size as the element mode first.

testsuite:
Thu Jul 11 15:39:21 2002  J"orn Rennecke <joern.rennecke@superh.com>
                          Andrew Pinski  <pinskia@physics.uc.edu>

	gcc.c-torture/compile/simd-2.c: New testcase.
	gcc.c-torture/compile/simd-3.c: Likewise.

Co-Authored-By: Andrew Pinski <pinskia@physics.uc.edu>

From-SVN: r55410

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,10 @@
+Fri Jul 12 00:49:36 2002  J"orn Rennecke <joern.rennecke@superh.com>
+
+	* simplify-rtx.c (simplify_subreg): Handle floating point
+	CONST_DOUBLEs.  When an integer subreg of a smaller mode than
+	the element mode is requested, compute a subreg with an
+	integer mode of the same size as the element mode first.
+
 Thu Jul 11 22:02:57 2002  J"orn Rennecke <joern.rennecke@superh.com>
 
 	* combine.c (try_combine): When converting a paradoxical subreg
