--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,8 @@
+2002-07-12  Jesse Rosenstock  <jmr@fulcrummicro.com>
+
+	For PR libgcj/7292:
+	* java/lang/Character.java (toString(char)): Now static.
+
 2002-07-12  Mark Wielaard  <mark@klomp.org>
 
 	* java/lang/natThrowable.cc (printRawStackTrace): removed.
