--- a/gcc/doc/sourcebuild.texi
+++ b/gcc/doc/sourcebuild.texi
@@ -610,9 +610,10 @@ codes.
 @node Front End Config
 @subsubsection The Front End @file{config-lang.in} File
 
-Each language subdirectory contains a @file{config-lang.in} file.
-This file is a shell script that may define some variables describing
-the language:
+Each language subdirectory contains a @file{config-lang.in} file.  In
+addition the main directory contains @file{c-config-lang.in}, which
+contains limited information for the C language.  This file is a shell
+script that may define some variables describing the language:
 
 @table @code
 @item language
@@ -655,6 +656,12 @@ by @file{configure} substituting values in them.  This mechanism can
 be used to create a file @file{@var{language}/Makefile} from
 @file{@var{language}/Makefile.in}, but this is deprecated, building
 everything from the single @file{gcc/Makefile} is preferred.
+@item gtfiles
+If defined, a space-separated list of files that should be scanned by
+gengtype.c to generate the garbage collection tables and routines for
+this language.  This excludes the files that are common to all front
+ends. @xref{Type Information}.
+
 @end table
 
 @node Back End
