--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2002-07-15  Jakub Jelinek  <jakub@redhat.com>
+
+	* gcc.c-torture/compile/20020710-1.c: New test.
+
 Thu Jul 11 15:39:21 2002  J"orn Rennecke <joern.rennecke@superh.com>
                           Andrew Pinski  <pinskia@physics.uc.edu>
 
