--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,16 @@
+2002-07-15  Tom Tromey  <tromey@redhat.com>
+
+	* Makefile.in: Rebuilt.
+	* Makefile.am (awt_java_source_files): Added new files.
+	* java/beans/ExceptionListener.java: Merged with Classpath.
+	* java/beans/PropertyChangeEvent.java: Merged with Classpath.
+	* java/beans/PropertyChangeListener.java: Merged with Classpath.
+	* java/beans/PropertyChangeListenerProxy.java: Merged with Classpath.
+	* java/beans/PropertyChangeSupport.java: Merged with Classpath.
+	* java/beans/VetoableChangeListener.java: Merged with Classpath.
+	* java/beans/VetoableChangeListenerProxy.java: Merged with Classpath.
+	* java/beans/VetoableChangeSupport.java: Merged with Classpath.
+
 2002-07-14  Mark Wielaard  <mark@klomp.org>
 
 	* gnu/java/security/der/DEREncodingException.java,
