--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-07-15  Jason Thorpe  <thorpej@wasabisystems.com>
+
+	* config/sparc/netbsd-elf.h (TRANSFER_FROM_TRAMPOLINE): Remove.
+
 2002-07-15  Michael Matz  <matz@suse.de>,
             Daniel Berlin  <dberlin@dberlin.org>,
 	    Denis Chertykov  <denisc@overta.ru>
