--- a/libstdc++-v3/ChangeLog
+++ b/libstdc++-v3/ChangeLog
@@ -1,3 +1,8 @@
+2002-07-15  Rainer Orth  <ro@TechFak.Uni-Bielefeld.DE>
+
+	* config/os/solaris/solaris2.5/bits/ctype_base.h (ctype_base): Fix
+	print to match vendor <ctype.h>.
+
 2002-07-03  Steev Wilcox  <steev@paradigmds.com>
 	 
 	PR libstdc++/7057
