* MAINTAINERS: Fix typo in a maintainer email address.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@55466 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2002-07-15  Hans-Peter Nilsson  <hp@bitrange.com>
+
+	* MAINTAINERS: Fix typo in a maintainer email address.
+
 2002-07-11  Nathanael Nerode  <neroden@gcc.gnu.org>
 
 	* configure.in: Remove two redundant tests.
